# SARAXSOFT

./: README.md  pyproject.toml
saraxsoft/: main.py
saraxsoft/ui/: main_window.py
