[project]
name = "SARAXSOFT"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Victoria Huisman", email = "hello.victoria@outlook.ie"},
]
dependencies = [
    "pillow>=11.0.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

